# app_to_bt

./: .gitignore  README.md  app.py  dev.kdl  flake.nix  main.py  napp.py  pyproject.toml  refactor_plan.md  test_cache.py
.github/workflows/: playwright.yml
notes/: 0_note_guideline.md  26-06-12_eform.md
outputs/: assignment_cache.example.json  assignment_cache.json  extracted_values.example.json  pdf_registry.example.json  pdf_registry.json
pages/: 1_PDF_to_BlueTable.py
src/: bluetable_tools.py
src/blue_table_tools/: __init__.py  actions.py  cache.py  schema.py
src/pages/: intake_form.py  landing.py  pdf_to_blue_table.py
src/pdf_processor/: engine.py
src/pdf_processor/core/: walker.py
src/pdf_processor/utils/: helpers.py  pdf_info.py
tests/: test_actions.py  test_app.py
tests/blue_table_tools/: test_actions.py
tests/pdf_processor/utils/: test_helpers.py
