[project]
name = "app-to-bt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.0",
    "streamlit>=1.58.0",
    "streamlit-image-coordinates>=0.4.0",
]


[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "pdf_processor"
]
